<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragmentLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_bk"
    android:orientation="horizontal">

    <EditText
        android:id="@+id/homework_description_frag"
        android:layout_width="0dp"
        android:layout_height="121dp"
        android:layout_margin="8dp"
        android:gravity="left"
        android:hint="@string/description"
        android:padding="4dp"
        android:textColor="#020000"
        android:background="@android:color/transparent"
        android:textColorHint="#4B494A"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/bt_cancel_frag"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_week_frag"
        android:layout_width="224dp"
        android:layout_height="71dp"
        android:layout_marginTop="42dp"
        android:text="@string/daynweek"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_week_frag"
        android:layout_width="62dp"
        android:layout_height="253dp"
        android:layout_marginStart="68dp"
        android:background="@drawable/border"
        android:backgroundTint="@color/purp"
        android:padding="8dp"
        app:layout_constraintBottom_toTopOf="@+id/homework_description_frag"
        app:layout_constraintEnd_toStartOf="@+id/rv_day_frag"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_week_frag" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_day_frag"
        android:layout_width="172dp"
        android:layout_height="242dp"
        android:layout_margin="48dp"
        android:background="@drawable/border"
        android:backgroundTint="@color/purp"
        android:padding="8dp"
        app:layout_constraintBottom_toTopOf="@+id/homework_description_frag"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/rv_week_frag"
        app:layout_constraintTop_toBottomOf="@+id/tv_week_frag" />

    <Button
        android:id="@+id/bt_add_frag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="48dp"
        android:text="@string/add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/bt_cancel_frag" />

    <Button
        android:id="@+id/bt_cancel_frag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="48dp"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/bt_add_frag"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/week_label_textview"
        android:layout_width="68dp"
        android:layout_height="42dp"
        android:layout_marginStart="16dp"
        android:textSize="24sp"
        android:text="@string/week_label_text"
        app:layout_constraintBottom_toTopOf="@+id/rv_week_frag"
        app:layout_constraintEnd_toStartOf="@+id/rv_day_frag"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_week_frag" />

    <TextView
        android:id="@+id/day_label_textview"
        android:layout_width="68dp"
        android:layout_height="42dp"
        android:textSize="24sp"
        android:text="@string/day_label_text"
        app:layout_constraintBottom_toTopOf="@+id/rv_day_frag"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/week_label_textview"
        app:layout_constraintTop_toBottomOf="@+id/tv_week_frag" />

</androidx.constraintlayout.widget.ConstraintLayout>